@@ -9,7 +9,8 @@ Authors@R: c(person("Jason", "Becker", role = "ctb", email = "jason@jbecker.co")
              person("Thomas J.", "Leeper", role = c("aut", "cre"), email = "thosjleeper@gmail.com"),
              person("Christopher", "Gandrud", role = "ctb"),
              person("Andrew", "MacDonald", role = "ctb"),
-             person("Ista", "Zahn", role = "ctb"))
+             person("Ista", "Zahn", role = "ctb"),
+             person("Stanislaus", "Stadlmann", role = "ctb"))
 Description: Streamlined data import and export by making assumptions that the user is probably willing to make: 'import()' and 'export()' determine the data structure from the file extension, reasonable defaults are used for data import and export (e.g., 'stringsAsFactors=FALSE'), web-based import is natively supported (including from SSL/HTTPS), compressed files can be read directly without explicit decompression, and fast import packages are used where appropriate.
 Depends: R (>= 2.15.0)
 Imports:
